restored page content and bootstrap customizations

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-sup brah
+<div class="jumbotron center">
+<h1>About us</h1>
+<p>This is my test app for <%= link_to "One Month Rails", "https://onemonth.com/courses/one-month-rails", class: 'btn btn-primary btn-lg' %></p>
+</div>
