--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,18 @@
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700);
+
+$body-bg: white;
+$font-family-sans-serif: 'Ubuntu', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$navbar-height: 45px;
+$navbar-inverse-bg: #1abc9c;
+$navbar-inverse-link-color: #34495e;
+$jumbotron-bg: #bdc3c7;
+
 @import 'bootstrap';
+
+.center {
+	text-align: center;
+}
+
+.navbar-brand {
+	font-weight: bold;
+}
