--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="jumbotron center">
+<h1>Welcome to Trident</h1>
+<p>
+	<%= link_to "Log in", "http://pre12.deviantart.net/d29a/th/pre/i/2013/106/0/8/squidward__handsome_squidward_by_millegas-d61zr7o.jpg", class: 'btn btn-default btn-lg' %>
+	<%= link_to "Sign up", "http://pbs.twimg.com/media/BEjouZKCUAA25dM.jpg", class: 'btn btn-success btn-lg' %>
+</p>
+</div>
